integrate swagger doc spec
