# app/controllers/controller.go
@@ -1,17 +1,26 @@
 package controllers
 
-type Controller map[string]interface{}
-
-func BuildErrResponse( status int, err error) Controller {
-	ctrlErr := Controller{}
-	ctrlErr["error_message"] = err.Error()
-	ctrlErr["status"] = status
-	return ctrlErr
+// ControllerResponse
+//
+// The generic response model of the API
+//
+// swagger:model
+type ControllerResponse struct {
+	Status       int         `json:"status"`
+	ErrorMessage string      `json:"error_message"`
+	Content      interface{} `json:"content"`
 }
 
-func BuildResponse(status int, content interface{}) Controller {
-	ctrlResp := Controller{}
-	ctrlResp["status"] = status
-	ctrlResp["content"] = content
-	return ctrlResp
+func BuildErrResponse(status int, err error) ControllerResponse {
+	return ControllerResponse{
+		Status:       status,
+		ErrorMessage: err.Error(),
+	}
+}
+
+func BuildResponse(status int, content interface{}) ControllerResponse {
+	return ControllerResponse{
+		Status:  status,
+		Content: content,
+	}
 }
